// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rubyOverhang renders 0 1`] = `
Array [
  .c0 {
  ruby-overhang: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders function 1`] = `
Array [
  .c0 {
  ruby-overhang: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: has;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: has;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders invalid theme path 1`] = `
Array [
  .c0 {
  ruby-overhang: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders negative number 1`] = `
Array [
  .c0 {
  ruby-overhang: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  ruby-overhang: July;
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: July;
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    ruby-overhang: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    ruby-overhang: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-overhang: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-overhang: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  ruby-overhang: July;
}

@media May {
  .c0 {
    ruby-overhang: August;
  }
}

@media April {
  .c0 {
    ruby-overhang: September;
  }
}

@media January {
  .c0 {
    ruby-overhang: November;
  }
}

@media April {
  .c0 {
    ruby-overhang: August;
  }
}

@media June {
  .c0 {
    ruby-overhang: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: July;
}

@media May {
  .c0 {
    ruby-overhang: August;
  }
}

@media April {
  .c0 {
    ruby-overhang: September;
  }
}

@media January {
  .c0 {
    ruby-overhang: November;
  }
}

@media April {
  .c0 {
    ruby-overhang: August;
  }
}

@media June {
  .c0 {
    ruby-overhang: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-overhang: November;
  }
}

@media April {
  .c0 {
    ruby-overhang: January;
  }
}

@media January {
  .c0 {
    ruby-overhang: December;
  }
}

@media April {
  .c0 {
    ruby-overhang: April;
  }
}

@media June {
  .c0 {
    ruby-overhang: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-overhang: November;
  }
}

@media April {
  .c0 {
    ruby-overhang: January;
  }
}

@media January {
  .c0 {
    ruby-overhang: December;
  }
}

@media April {
  .c0 {
    ruby-overhang: April;
  }
}

@media June {
  .c0 {
    ruby-overhang: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    ruby-overhang: July;
  }
}

@media April {
  .c0 {
    ruby-overhang: August;
  }
}

@media January {
  .c0 {
    ruby-overhang: September;
  }
}

@media April {
  .c0 {
    ruby-overhang: November;
  }
}

@media June {
  .c0 {
    ruby-overhang: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    ruby-overhang: July;
  }
}

@media April {
  .c0 {
    ruby-overhang: August;
  }
}

@media January {
  .c0 {
    ruby-overhang: September;
  }
}

@media April {
  .c0 {
    ruby-overhang: November;
  }
}

@media June {
  .c0 {
    ruby-overhang: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-overhang: January;
  }
}

@media April {
  .c0 {
    ruby-overhang: December;
  }
}

@media January {
  .c0 {
    ruby-overhang: April;
  }
}

@media April {
  .c0 {
    ruby-overhang: May;
  }
}

@media June {
  .c0 {
    ruby-overhang: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-overhang: January;
  }
}

@media April {
  .c0 {
    ruby-overhang: December;
  }
}

@media January {
  .c0 {
    ruby-overhang: April;
  }
}

@media April {
  .c0 {
    ruby-overhang: May;
  }
}

@media June {
  .c0 {
    ruby-overhang: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders postitive number 1`] = `
Array [
  .c0 {
  ruby-overhang: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders string 1`] = `
Array [
  .c0 {
  ruby-overhang: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: June;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: June;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyOverhang renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`rubyOverhang renders valid theme path 1`] = `
Array [
  .c0 {
  ruby-overhang: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-overhang: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
